<resources>
    <string name="app_name">base_1919_1_2</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="division">/</string>
    <string name="equally">=</string>
    <string name="comma">,</string>
    <string name="multiply">*</string>
    <string name="themeRed">Red</string>
    <string name="themeGreen">Green</string>
    <string name="themeBlue">Blue</string>
    <string name="themeDef">themeDef</string>


</resources>